kubernetes/apps/observability/loki/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: loki
  annotations:
    gatus.home-operations.com/endpoint: |
      conditions:
        - "[STATUS] == 200"
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - "loki.${SECRET_DOMAIN}"
  rules:
    - backendRefs:
        - name: loki
          port: 3100
      matches:
        - path:
            type: PathPrefix
            value: /
